--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,6 @@ footer {
   margin: 20px;
 }
 
-header {
-  background-color: #333333;
-}
-
-nav {
-  background-color: #333333;
-}
-
 nav ul {
   list-style: none;
   padding: 0;
@@ -41,13 +33,37 @@ nav a {
 
 section {
   border: 1px solid #333333;
-  background-color: #292929;
+  /* background-color: #292929; */
+  border-radius: 10px; /* Adjust the value to control the roundness */
 }
 
-footer {
+.footer {
   background-color: #333333;
   text-align: center;
   position: fixed;
   bottom: 0;
   width: 100%;
+}
+
+/* Updated CSS for the image grid */
+.image-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.grid-item {
+  text-align: center;
+}
+
+.grid-item img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  transition: transform 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.grid-item img:hover {
+  transform: scale(0.95);
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.7);
 }
