--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,20 @@
 body {
   background-color: #1a1a1a;
   color: #ffffff;
-  font-family: "Arial", sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
 }
 
-header,
-nav,
 section,
 footer {
   padding: 20px;
   margin: 20px;
+}
+
+nav,
+header {
+  margin: 20px 20px 40px 40px;
 }
 
 nav ul {
